[tool.poetry]
name = "green-node"
version = "0.1.0"
description = ""
authors = ["lenhelm"]

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^4.4.2"
xmltodict = "^0.12.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
